--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
         <br>
         <a href="about.html">О нас</a>
         <br>
+        <br>
+        <br>
+        <p class="b">SarvarJON</p>
     </body>
 </html>
